# eaon-desktop

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE.md  NOTICE  Package.swift  README.md  RELEASING-UPDATES.md  handoff.md  run.sh  update-manifest.sample.json
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: release.yml
Eaon-desktop/: App.swift
Eaon-desktop/Resources/: CuratedOllamaModels.json
Eaon-desktop/Services/: APIKeyStore.swift  AppFonts.swift  AppearanceSettings.swift  AquaAPI.swift  AquaSupportedModels.swift  AttachmentStore.swift  BrandLogoLoader.swift  CodeWorkspace.swift  CustomMCPServer.swift  CustomProviderAPI.swift  CustomProviderStore.swift  DesktopAssistant.swift  DesktopControl.swift  EaonCLILauncher.swift  EaonHostedAPI.swift  EaonHostedModels.swift  EaonMode.swift  FreeWeekTrial.swift  LocalAI.swift  (+20 more)
eaon-cli/: README.md  handoff.md  package-lock.json  package.json  tsconfig.json
eaon-tauri/: BUILDING.md  README.md  RELEASING.md  index.html  package-lock.json  package.json  vite.config.ts
eaon-tauri/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
eaon-tauri/src-tauri/capabilities/: default.json
eaon-tauri/src-tauri/examples/: stream_smoke.rs
eaon-tauri/src-tauri/src/: attachments.rs  chat.rs  chat_formats.rs  images.rs  lib.rs  main.rs  mcp.rs  mcp_oauth.rs  net.rs  ollama.rs  providers.rs  search.rs  server.rs  skills.rs  specs.rs  storage.rs  tools.rs  trial.rs
eaon-tauri/src-tauri/src/tools/: fsops.rs  mod.rs  openers.rs  safety.rs  searchops.rs  shell.rs
(+226 files in other folders)
