[package]
name = "eaon-desktop-xp"
version = "2026.4.0"
description = "Eaon for Windows and Linux — a Rust core with a web UI"
authors = ["Eaon"]
license = "GPL-3.0"
edition = "2021"

[lib]
name = "eaon_desktop_xp_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-window-state = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# rustls on purpose: no OpenSSL means no C toolchain headaches on the
# Windows/Linux release runners.
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls", "gzip"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "io-util", "process", "time", "sync"] }
futures-util = "0.3"
base64 = "0.22"
regex = "1"
trash = "5"
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
uuid = { version = "1", features = ["v4"] }
sysinfo = { version = "0.33", default-features = false, features = ["system"] }

[target.'cfg(windows)'.dependencies]
winreg = "0.55"

[profile.release]
lto = true
opt-level = "s"
strip = true
codegen-units = 1
